objects/Weekly_User_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Automated_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Automated Report</label>
        <referenceTo>Automated_Report__c</referenceTo>
        <relationshipLabel>Weekly User Reporting</relationshipLabel>
        <relationshipName>Weekly_User_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Browser_Login_Date__c</fullName>
        <label>Last Browser Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logged_in_within_past_week__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logged in within past week?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Total_Licenses__c</fullName>
        <label>Number of Total Licenses</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Department__c</fullName>
        <formula>User__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Daily_User_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Weekly User Reporting</label>
    <nameField>
        <displayFormat>{MM}{DD}{YYYY}-{000000}</displayFormat>
        <label>Weekly User Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly User Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>